36686 migrate material sample to v2 (#502)
* 36686_Migrate_material-sample_to_v2
Started mapper (wip)

* Completed material sample mapper
Started test

* Added more tests

* Added more tests

* Updated dto and repository
Started test migration

* Migrated Organism

* Migrated collection

* Collection repo + tests update

* Started collecting-event migration

* Updated dina-base to 0.151

* Updated tests

* Migrated CollectionMethod

* Migrated Protocol and Project

* Started work on storage

* Fixed some storage tests

* Migrated prep method, type, protocol element

* Completed storage-unit
Migrated remaining dtos

* Fixed MaterialSample tests

* Fixed collecting-event

* Use released dina-base version

* Fixed CollectingEventMapperTest

* Migrate material samples to v2

- Added test case for collecting event import

* Fixed mat-sample rest test
Added test for coordinates mapping
Added JsonIgnore on relationships on MaterialSample

* Fixed null relationship in Mapper

* Added isPropertyProvidedInsideContext
This will allow to have the condition in nested element (relationships)

* Migrate material samples to v2

- Added test case for external resources

* Added missing external rel config

* Added ExternalRelationshipMapper

* Use ExternalRelationshipMapper

* Added missing config
JsonIgnore + null check in mapper config

* Added missing jsonignore

* Fixed material-sample mapper
Now using base class condition method

* Added GeoLatter config

* Added bulk tests

* Added bulk patch test

* Added missing annotation on Institution

* Support #36686 - Miigrate Material Sample to v2

- Found an "Could not initiatalize proxy" error, created a failing test case for it.

* Improve material-sample mapper
Alos provide read-only transaction to material-sample loading

* Moved cellNumber to optfields
cellNumber will now be optionally calculated

* Support #36686 - Migrate Material Sample to v2

- When doing an include for a storageUnitType the gridLayoutDefinition is not being