@@ -1,18 +1,5 @@
 package ca.gc.aafc.collection.api.repository;
 
-import ca.gc.aafc.collection.api.CollectionModuleKeycloakBaseIT;
-import ca.gc.aafc.dina.datetime.ISODateTime;
-import ca.gc.aafc.collection.api.dto.CollectingEventDto;
-import ca.gc.aafc.collection.api.dto.CollectionMethodDto;
-import ca.gc.aafc.collection.api.dto.GeoreferenceAssertionDto;
-import ca.gc.aafc.collection.api.testsupport.fixtures.CollectingEventTestFixture;
-import ca.gc.aafc.collection.api.testsupport.fixtures.CollectionMethodTestFixture;
-import ca.gc.aafc.dina.dto.ExternalRelationDto;
-import ca.gc.aafc.dina.testsupport.security.WithMockKeycloakUser;
-import io.crnk.core.queryspec.FilterOperator;
-import io.crnk.core.queryspec.IncludeRelationSpec;
-import io.crnk.core.queryspec.PathSpec;
-import io.crnk.core.queryspec.QuerySpec;
 import org.hamcrest.MatcherAssert;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
@@ -20,17 +7,34 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import javax.inject.Inject;
-import javax.validation.ConstraintViolationException;
-import java.util.Arrays;
+import ca.gc.aafc.collection.api.dto.CollectingEventDto;
+import ca.gc.aafc.collection.api.dto.CollectionMethodDto;
+import ca.gc.aafc.collection.api.dto.GeoreferenceAssertionDto;
+import ca.gc.aafc.collection.api.testsupport.fixtures.CollectingEventTestFixture;
+import ca.gc.aafc.collection.api.testsupport.fixtures.CollectionMethodTestFixture;
+import ca.gc.aafc.dina.datetime.ISODateTime;
+import ca.gc.aafc.dina.exception.ResourceGoneException;
+import ca.gc.aafc.dina.exception.ResourceNotFoundException;
+import ca.gc.aafc.dina.jsonapi.JsonApiDocument;
+import ca.gc.aafc.dina.jsonapi.JsonApiDocuments;
+import ca.gc.aafc.dina.testsupport.jsonapi.JsonAPITestHelper;
+import ca.gc.aafc.dina.testsupport.security.WithMockKeycloakUser;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import javax.inject.Inject;
+import javax.transaction.Transactional;
+import javax.validation.ConstraintViolationException;
 
-import static org.junit.jupiter.api.Assertions.*;
-
-public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT {
+public class CollectingEventRepositoryIT extends BaseRepositoryIT {
 
   @Inject
   private CollectingEventRepository collectingEventRepository;
@@ -40,23 +44,16 @@ public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT 
 
   @Test
   @WithMockKeycloakUser(groupRole = {"aafc:user"})
-  public void findCollectingEvent_whenNoFieldsAreSelected_CollectingEventReturnedWithAllFields() {
-    CollectingEventDto testCollectingEvent = collectingEventRepository.create(CollectingEventTestFixture.newEventDto());
+  public void findCollectingEvent_whenNoFieldsAreSelected_CollectingEventReturnedWithAllFields()
+      throws ResourceGoneException, ResourceNotFoundException {
 
-    QuerySpec querySpec = new QuerySpec(CollectingEventDto.class);
+    CollectingEventDto testCollectingEvent = CollectingEventTestFixture.newEventDto();
+    UUID collEventUUID = createWithRepository(testCollectingEvent, collectingEventRepository::onCreate);
 
-    List<IncludeRelationSpec> includeRelationSpec = Stream.of("geoReferenceAssertions")
-      .map(Arrays::asList)
-      .map(IncludeRelationSpec::new)
-      .collect(Collectors.toList());
-
-    querySpec.setIncludedRelations(includeRelationSpec);
-
-    CollectingEventDto collectingEventDto = collectingEventRepository
-      .findOne(testCollectingEvent.getUuid(), querySpec);
+    CollectingEventDto collectingEventDto = collectingEventRepository.getOne(collEventUUID, "").getDto();
 
     assertNotNull(collectingEventDto);
-    assertEquals(testCollectingEvent.getUuid(), collectingEventDto.getUuid());
+    assertEquals(collEventUUID, collectingEventDto.getUuid());
     assertEquals(testCollectingEvent.getCreatedBy(), collectingEventDto.getCreatedBy());
     assertEquals(
       testCollectingEvent.getStartEventDateTime(),
@@ -68,20 +65,14 @@ public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT 
 
     assertEquals(
       12.123456,
-      collectingEventDto.getGeoReferenceAssertions().iterator().next().getDwcDecimalLatitude());
+      collectingEventDto.getGeoReferenceAssertions().getFirst().getDwcDecimalLatitude());
 
     assertEquals(
       CollectingEventTestFixture.TEST_GEOREFERENCE_DATE,
-      collectingEventDto.getGeoReferenceAssertions().iterator().next().getDwcGeoreferencedDate());
+      collectingEventDto.getGeoReferenceAssertions().getFirst().getDwcGeoreferencedDate());
 
     assertEquals(CollectingEventTestFixture.VER_COOR, collectingEventDto.getDwcVerbatimCoordinates());
     assertEquals(CollectingEventTestFixture.DWC_RECORDED_BY, collectingEventDto.getDwcRecordedBy());
-    assertEquals(
-      testCollectingEvent.getAttachment().get(0).getId(),
-      collectingEventDto.getAttachment().get(0).getId());
-    assertEquals(
-      testCollectingEvent.getCollectors().get(0).getId(),
-      collectingEventDto.getCollectors().get(0).getId());
     assertEquals(CollectingEventTestFixture.DWC_VERBATIM_LOCALITY, collectingEventDto.getDwcVerbatimLocality());
     assertEquals(CollectingEventTestFixture.DWC_VERBATIM_LATITUDE, collectingEventDto.getDwcVerbatimLatitude());
     assertEquals(CollectingEventTestFixture.DWC_VERBATIM_LONGITUDE, collectingEventDto.getDwcVerbatimLongitude());
@@ -107,20 +98,30 @@ public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT 
 
   @WithMockKeycloakUser(groupRole = {"aafc:super-user"})
   @Test
-  public void create_WithAuthenticatedUser_SetsCreatedBy() {
-    CollectionMethodDto methodDto = collectionMethodRepository.create(CollectionMethodTestFixture.newMethod());
+  public void create_WithAuthenticatedUser_SetsCreatedBy()
+      throws ResourceGoneException, ResourceNotFoundException {
+    CollectionMethodDto expected = CollectionMethodTestFixture.newMethod();
+    UUID attachmentUUID = UUID.randomUUID();
+    UUID collMethodUUID = createWithRepository(expected, collectionMethodRepository::onCreate);
+
     CollectingEventDto ce = CollectingEventTestFixture.newEventDto();
-    ce.setCollectionMethod(methodDto);
     ce.setStartEventDateTime(ISODateTime.parse("2007-12-03T10:15:30").toString());
     ce.setEndEventDateTime(ISODateTime.parse("2007-12-04T11:20:20").toString());
-    QuerySpec querySpec = new QuerySpec(CollectingEventDto.class);
-    querySpec.includeRelation(PathSpec.of("collectionMethod"));
-    CollectingEventDto result = collectingEventRepository.findOne(
-      collectingEventRepository.create(ce).getUuid(),
-      querySpec);
+
+    JsonApiDocument collEventToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, CollectingEventDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(ce),
+      Map.of(
+        "collectionMethod", JsonApiDocument.ResourceIdentifier.builder().id(collMethodUUID).type(CollectionMethodDto.TYPENAME).build(),
+        "attachment", List.of(JsonApiDocument.ResourceIdentifier.builder().id(attachmentUUID).type("metadata").build()))
+    );
+
+    UUID collEventUUID = createWithRepository(collEventToCreate, collectingEventRepository::onCreate);
+    CollectingEventDto result = collectingEventRepository.getOne(collEventUUID, "include=collectionMethod,attachment").getDto();
+
     assertNotNull(result.getCreatedBy());
-    assertEquals(ce.getAttachment().get(0).getId(), result.getAttachment().get(0).getId());
-    assertEquals(ce.getCollectors().get(0).getId(), result.getCollectors().get(0).getId());
+    assertEquals(attachmentUUID.toString(), result.getAttachment().getFirst().getId());
+  //  assertEquals(ce.getCollectors().getFirst().getId(), result.getCollectors().getFirst().getId());
     assertEquals(CollectingEventTestFixture.DWC_RECORDED_BY, result.getDwcRecordedBy());
     assertEquals(CollectingEventTestFixture.DWC_VERBATIM_LOCALITY, result.getDwcVerbatimLocality());
     assertEquals(CollectingEventTestFixture.DWC_VERBATIM_LATITUDE, result.getDwcVerbatimLatitude());
@@ -132,21 +133,22 @@ public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT 
     assertEquals(CollectingEventTestFixture.OTHER_RECORD_NUMBERS[1], result.getOtherRecordNumbers()[1]);
     assertEquals(CollectingEventTestFixture.HABITAT, result.getHabitat());
     assertEquals(CollectingEventTestFixture.HOST, result.getHost());
-    assertAssertion(result.getGeoReferenceAssertions().get(0), ce.getGeoReferenceAssertions().get(0));
-    assertEquals(methodDto.getUuid(), result.getCollectionMethod().getUuid());
+    assertAssertion(result.getGeoReferenceAssertions().getFirst(), ce.getGeoReferenceAssertions().getFirst());
+    assertEquals(collMethodUUID, result.getCollectionMethod().getUuid());
     MatcherAssert.assertThat(CollectingEventTestFixture.SUBSTRATE, Matchers.is(result.getSubstrate()));
   }
 
   @WithMockKeycloakUser(groupRole = {"aafc:user"})
   @Test
-  public void create_withUserProvidedUUID_resourceCreatedWithProvidedUUID() {
+  public void create_withUserProvidedUUID_resourceCreatedWithProvidedUUID()
+      throws ResourceGoneException, ResourceNotFoundException {
     UUID myUUID = UUID.randomUUID();
     CollectingEventDto ce = CollectingEventTestFixture.newEventDto();
     ce.setUuid(myUUID);
-    collectingEventRepository.create(ce);
 
-    QuerySpec querySpec = new QuerySpec(CollectingEventDto.class);
-    CollectingEventDto refreshedCe = collectingEventRepository.findOne(myUUID, querySpec);
+    createWithRepository(ce, collectingEventRepository::onCreate);
+    CollectingEventDto refreshedCe = collectingEventRepository.getOne(myUUID, "").getDto();
+
     assertNotNull(refreshedCe);
   }
 
@@ -154,13 +156,17 @@ public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT 
   @Test
   public void create_withDuplicatedExternalRelationship_exception() {
     CollectingEventDto ce = CollectingEventTestFixture.newEventDto();
-    ExternalRelationDto externalRelationship = ExternalRelationDto.builder()
-            .id(UUID.randomUUID().toString())
-            .type("metadata")
-            .build();
-    // add it twice to make sure the UniqueElement annotation is doing what we think
-    ce.setAttachment(List.of(externalRelationship, externalRelationship));
-    assertThrows(ConstraintViolationException.class, () -> collectingEventRepository.create(ce));
+    JsonApiDocument.ResourceIdentifier externalRelationship = JsonApiDocument.ResourceIdentifier.builder()
+      .type("metadata").id(UUID.randomUUID()).build();
+
+    JsonApiDocument docToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, CollectingEventDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(ce),
+      // add it twice to make sure the UniqueElement annotation is doing what we think
+      Map.of("attachment", List.of(externalRelationship, externalRelationship))
+    );
+
+    assertThrows(ConstraintViolationException.class, () -> collectingEventRepository.create(docToCreate, null));
   }
 
   private void assertAssertion(
@@ -175,7 +181,7 @@ public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT 
     assertEquals(expectedAssertion.getDwcDecimalLongitude(), resultAssertion.getDwcDecimalLongitude());
     assertEquals(expectedAssertion.getDwcDecimalLatitude(), resultAssertion.getDwcDecimalLatitude());
     assertEquals(expectedAssertion.getIsPrimary(), resultAssertion.getIsPrimary());
-    assertEquals(expectedAssertion.getCreatedOn(), resultAssertion.getCreatedOn());
+    assertNotNull(resultAssertion.getCreatedOn());
     assertEquals(expectedAssertion.getDwcGeoreferencedDate(), resultAssertion.getDwcGeoreferencedDate());
     assertEquals(expectedAssertion.getDwcCoordinateUncertaintyInMeters(), resultAssertion.getDwcCoordinateUncertaintyInMeters());
     assertEquals(expectedAssertion.getDwcGeodeticDatum(), resultAssertion.getDwcGeodeticDatum());
@@ -190,106 +196,106 @@ public class CollectingEventRepositoryIT extends CollectionModuleKeycloakBaseIT 
   @ParameterizedTest
   @MethodSource({"equalFilterSource", "lt_FilterSource", "gt_FilterSource"})
   @WithMockKeycloakUser(groupRole = {"aafc:user"})
+  @Transactional
   void findAll_PrecisionBoundsTest_DateFilteredCorrectly(String startDate, String input, int expectedSize) {
+
     CollectingEventDto ce = CollectingEventTestFixture.newEventDto();
     ce.setStartEventDateTime(ISODateTime.parse(startDate).toString());
     ce.setEndEventDateTime(ISODateTime.parse("2020").toString());
-    collectingEventRepository.create(ce);
-    assertEquals(expectedSize, collectingEventRepository.findAll(newRsqlQuerySpec(input)).size());
+
+    createWithRepository(ce, collectingEventRepository::onCreate);
+
+    assertEquals(expectedSize, collectingEventRepository.getAll(input).totalCount());
   }
 
   private static Stream<Arguments> equalFilterSource() {
     return Stream.of(
       // Format YYYY
-      Arguments.of("1999", "startEventDateTime==1999", 1),
-      Arguments.of("1999", "startEventDateTime==1998", 0),
+      Arguments.of("1999", "filter[startEventDateTime]=1999", 1),
+      Arguments.of("1999", "filter[startEventDateTime]=1998", 0),
       // Format YYYY-MM
-      Arguments.of("1999-03", "startEventDateTime==1999-03", 1),
-      Arguments.of("1999-03", "startEventDateTime==1999-02", 0),
+      Arguments.of("1999-03", "filter[startEventDateTime]=1999-03", 1),
+      Arguments.of("1999-03", "filter[startEventDateTime]=1999-02", 0),
       // Format YYYY-MM-DD
-      Arguments.of("1999-03-03", "startEventDateTime==1999-03-03", 1),
-      Arguments.of("1999-03-03", "startEventDateTime==1999-03-02", 0),
+      Arguments.of("1999-03-03", "filter[startEventDateTime]=1999-03-03", 1),
+      Arguments.of("1999-03-03", "filter[startEventDateTime]=1999-03-02", 0),
       // Format YYYY-MM-DD-HH-MM
-      Arguments.of("1999-03-03T03:00", "startEventDateTime==1999-03-03T03:00", 1),
-      Arguments.of("1999-03-03T03:00", "startEventDateTime==1999-03-03T02:00", 0),
+      Arguments.of("1999-03-03T03:00", "filter[startEventDateTime]=1999-03-03T03:00", 1),
+      Arguments.of("1999-03-03T03:00", "filter[startEventDateTime]=1999-03-03T02:00", 0),
       // Format YYYY-MM-DD-HH-MM-SS
-      Arguments.of("1999-03-03T03:00:03", "startEventDateTime==1999-03-03T03:00:03", 1),
-      Arguments.of("1999-03-03T03:00:03", "startEventDateTime==1999-03-03T03:00:02", 0)
+      Arguments.of("1999-03-03T03:00:03", "filter[startEventDateTime]=1999-03-03T03:00:03", 1),
+      Arguments.of("1999-03-03T03:00:03", "filter[startEventDateTime]=1999-03-03T03:00:02", 0)
     );
   }
 
   private static Stream<Arguments> lt_FilterSource() {
     return Stream.of(
       // Format YYYY
-      Arguments.of("1999", "startEventDateTime=le=1999", 1),
-      Arguments.of("1999", "startEventDateTime=le=1998", 0),
+      Arguments.of("1999", "filter[startEventDateTime][LOE]=1999", 1),
+      Arguments.of("1999", "filter[startEventDateTime][LOE]=1998", 0),
 
-      Arguments.of("1999", "startEventDateTime=lt=1999", 0),
-      Arguments.of("1999", "startEventDateTime=lt=2000", 1),
+      Arguments.of("1999", "filter[startEventDateTime][LT]=1999", 0),
+      Arguments.of("1999", "filter[startEventDateTime][LT]=2000", 1),
 
       // Format YYYY-MM
-      Arguments.of("1999", "startEventDateTime=le=1999-01", 0),
-      Arguments.of("1999-01", "startEventDateTime=le=1999-01", 1),
-      Arguments.of("1999-01", "startEventDateTime=le=1998-12", 0),
+      Arguments.of("1999", "filter[startEventDateTime][LOE]=1999-01", 0),
+      Arguments.of("1999-01", "filter[startEventDateTime][LOE]=1999-01", 1),
+      Arguments.of("1999-01", "filter[startEventDateTime][LOE]=1998-12", 0),
 
-      Arguments.of("1999-01", "startEventDateTime=lt=1999-01", 0),
-      Arguments.of("1999-01", "startEventDateTime=lt=1999-02", 1),
+      Arguments.of("1999-01", "filter[startEventDateTime][LT]=1999-01", 0),
+      Arguments.of("1999-01", "filter[startEventDateTime][LT]=1999-02", 1),
 
       // Format YYYY-MM-DD
-      Arguments.of("1999-01", "startEventDateTime=le=1999-01-01", 0),
-      Arguments.of("1999-01-02", "startEventDateTime=le=1999-01-02", 1),
-      Arguments.of("1999-01-02", "startEventDateTime=le=1999-01-01", 0),
+      Arguments.of("1999-01", "filter[startEventDateTime][LOE]=1999-01-01", 0),
+      Arguments.of("1999-01-02", "filter[startEventDateTime][LOE]=1999-01-02", 1),
+      Arguments.of("1999-01-02", "filter[startEventDateTime][LOE]=1999-01-01", 0),
 
-      Arguments.of("1999-01-02", "startEventDateTime=lt=1999-01-02", 0),
-      Arguments.of("1999-01-02", "startEventDateTime=lt=1999-01-03", 1),
+      Arguments.of("1999-01-02", "filter[startEventDateTime][LT]=1999-01-02", 0),
+      Arguments.of("1999-01-02", "filter[startEventDateTime][LT]=1999-01-03", 1),
       // Format YYYY-MM-DD-HH-MM
-      Arguments.of("1999-01-02", "startEventDateTime=le=1999-01-02T02:00", 0),
-      Arguments.of("1999-01-02T01:00", "startEventDateTime=le=1999-01-02T02:00", 1),
-      Arguments.of("1999-01-02T02:00", "startEventDateTime=le=1999-01-02T01:00", 0),
+      Arguments.of("1999-01-02", "filter[startEventDateTime][LOE]=1999-01-02T02:00", 0),
+      Arguments.of("1999-01-02T01:00", "filter[startEventDateTime][LOE]=1999-01-02T02:00", 1),
+      Arguments.of("1999-01-02T02:00", "filter[startEventDateTime][LOE]=1999-01-02T01:00", 0),
 
-      Arguments.of("1999-01-02T02:00", "startEventDateTime=lt=1999-01-02T02:00", 0),
-      Arguments.of("1999-01-02T02:00", "startEventDateTime=lt=1999-01-02T03:00", 1)
+      Arguments.of("1999-01-02T02:00", "filter[startEventDateTime][LT]=1999-01-02T02:00", 0),
+      Arguments.of("1999-01-02T02:00", "filter[startEventDateTime][LT]=1999-01-02T03:00", 1)
     );
   }
 
   private static Stream<Arguments> gt_FilterSource() {
     return Stream.of(
       // Format YYYY
-      Arguments.of("2010", "startEventDateTime=ge=2010", 1),
-      Arguments.of("2010", "startEventDateTime=ge=2011", 0),
+      Arguments.of("2010", "filter[startEventDateTime][GOE]=2010", 1),
+      Arguments.of("2010", "filter[startEventDateTime][GOE]=2011", 0),
 
-      Arguments.of("2010", "startEventDateTime=gt=2010", 0),
-      Arguments.of("2010", "startEventDateTime=gt=2009", 1),
+      Arguments.of("2010", "filter[startEventDateTime][GT]=2010", 0),
+      Arguments.of("2010", "filter[startEventDateTime][GT]=2009", 1),
 
       // Format YYYY-MM
-      Arguments.of("2010", "startEventDateTime=ge=2010-01", 0),
-      Arguments.of("2010-01", "startEventDateTime=ge=2010-01", 1),
-      Arguments.of("2010-01", "startEventDateTime=ge=2010-02", 0),
+      Arguments.of("2010", "filter[startEventDateTime][GOE]=2010-01", 0),
+      Arguments.of("2010-01", "filter[startEventDateTime][GOE]=2010-01", 1),
+      Arguments.of("2010-01", "filter[startEventDateTime][GOE]=2010-02", 0),
 
-      Arguments.of("2010-01", "startEventDateTime=gt=2010-01", 0),
-      Arguments.of("2010-01", "startEventDateTime=gt=2009-12", 1),
+      Arguments.of("2010-01", "filter[startEventDateTime][GT]=2010-01", 0),
+      Arguments.of("2010-01", "filter[startEventDateTime][GT]=2009-12", 1),
 
       // Format YYYY-MM-DD
-      Arguments.of("2010-01", "startEventDateTime=ge=2010-01-01", 0),
-      Arguments.of("2010-01-02", "startEventDateTime=ge=2010-01-02", 1),
-      Arguments.of("2010-01-02", "startEventDateTime=ge=2010-01-03", 0),
+      Arguments.of("2010-01", "filter[startEventDateTime][GOE]=2010-01-01", 0),
+      Arguments.of("2010-01-02", "filter[startEventDateTime][GOE]=2010-01-02", 1),
+      Arguments.of("2010-01-02", "filter[startEventDateTime][GOE]=2010-01-03", 0),
 
-      Arguments.of("2010-01-02", "startEventDateTime=gt=2010-01-02", 0),
-      Arguments.of("2010-01-02", "startEventDateTime=gt=2010-01-01", 1),
+      Arguments.of("2010-01-02", "filter[startEventDateTime][GT]=2010-01-02", 0),
+      Arguments.of("2010-01-02", "filter[startEventDateTime][GT]=2010-01-01", 1),
       // Format YYYY-MM-DD-HH-MM
-      Arguments.of("2010-01-02", "startEventDateTime=ge=2010-01-02T02:00", 0),
-      Arguments.of("2010-01-02T01:00", "startEventDateTime=ge=2010-01-02T02:00", 0),
-      Arguments.of("2010-01-02T02:00", "startEventDateTime=ge=2010-01-02T01:00", 1),
+      Arguments.of("2010-01-02", "filter[startEventDateTime][GOE]=2010-01-02T02:00", 0),
+      Arguments.of("2010-01-02T01:00", "filter[startEventDateTime][GOE]=2010-01-02T02:00", 0),
+      Arguments.of("2010-01-02T02:00", "filter[startEventDateTime][GOE]=2010-01-02T01:00", 1),
 
-      Arguments.of("2010-01-02T02:00", "startEventDateTime=gt=2010-01-02T02:00", 0),
-      Arguments.of("2010-01-02T02:00", "startEventDateTime=gt=2010-01-02T01:00", 1)
+      Arguments.of("2010-01-02T02:00", "filter[startEventDateTime][GT]=2010-01-02T02:00", 0),
+      Arguments.of("2010-01-02T02:00", "filter[startEventDateTime][GT]=2010-01-02T01:00", 1),
+
+
+      Arguments.of("2012", "filter[startEventDateTime][GT]=2011-06", 1)
     );
   }
-
-  private static QuerySpec newRsqlQuerySpec(String rsql) {
-    QuerySpec spec = new QuerySpec(CollectingEventDto.class);
-    spec.addFilter(PathSpec.of("rsql").filter(FilterOperator.EQ, rsql));
-    return spec;
-  }
-
 }
