@@ -1,54 +1,53 @@
 package ca.gc.aafc.collection.api.repository;
 
-import ca.gc.aafc.collection.api.CollectionModuleBaseIT;
+import org.junit.jupiter.api.Test;
+import org.springframework.security.access.AccessDeniedException;
+
 import ca.gc.aafc.collection.api.dto.CollectingEventDto;
 import ca.gc.aafc.collection.api.dto.CollectionDto;
 import ca.gc.aafc.collection.api.dto.CollectionManagedAttributeDto;
-import ca.gc.aafc.collection.api.dto.InstitutionDto;
 import ca.gc.aafc.collection.api.dto.MaterialSampleDto;
 import ca.gc.aafc.collection.api.dto.OrganismDto;
 import ca.gc.aafc.collection.api.entities.CollectionManagedAttribute;
-import ca.gc.aafc.collection.api.entities.Institution;
 import ca.gc.aafc.collection.api.entities.MaterialSample;
+import ca.gc.aafc.collection.api.service.MaterialSampleService;
+import ca.gc.aafc.collection.api.testsupport.ServiceTransactionWrapper;
 import ca.gc.aafc.collection.api.testsupport.factories.MaterialSampleFactory;
 import ca.gc.aafc.collection.api.testsupport.fixtures.CollectingEventTestFixture;
 import ca.gc.aafc.collection.api.testsupport.fixtures.CollectionFixture;
 import ca.gc.aafc.collection.api.testsupport.fixtures.CollectionManagedAttributeTestFixture;
 import ca.gc.aafc.collection.api.testsupport.fixtures.DeterminationFixture;
 import ca.gc.aafc.collection.api.testsupport.fixtures.ExtensionValueTestFixture;
-import ca.gc.aafc.collection.api.testsupport.fixtures.InstitutionFixture;
 import ca.gc.aafc.collection.api.testsupport.fixtures.MaterialSampleTestFixture;
 import ca.gc.aafc.collection.api.testsupport.fixtures.OrganismTestFixture;
 import ca.gc.aafc.dina.exception.ResourceGoneException;
 import ca.gc.aafc.dina.exception.ResourceNotFoundException;
 import ca.gc.aafc.dina.jsonapi.JsonApiDocument;
 import ca.gc.aafc.dina.jsonapi.JsonApiDocuments;
-import ca.gc.aafc.dina.repository.GoneException;
+import ca.gc.aafc.dina.repository.JsonApiModelAssistant;
 import ca.gc.aafc.dina.testsupport.jsonapi.JsonAPITestHelper;
-import ca.gc.aafc.dina.vocabulary.TypedVocabularyElement.VocabularyElementType;
 import ca.gc.aafc.dina.testsupport.security.WithMockKeycloakUser;
-import io.crnk.core.queryspec.PathSpec;
-import io.crnk.core.queryspec.QuerySpec;
-import org.junit.jupiter.api.Test;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.security.access.AccessDeniedException;
+import ca.gc.aafc.dina.vocabulary.TypedVocabularyElement.VocabularyElementType;
 
-import javax.inject.Inject;
-import javax.validation.ValidationException;
+import static ca.gc.aafc.collection.api.testsupport.fixtures.MaterialSampleTestFixture.RESTRICTION_FIELD_KEY;
+import static ca.gc.aafc.collection.api.testsupport.fixtures.MaterialSampleTestFixture.RESTRICTION_VALUE;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.net.MalformedURLException;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import javax.inject.Inject;
+import javax.transaction.Transactional;
+import javax.validation.ValidationException;
 
-import static ca.gc.aafc.collection.api.testsupport.fixtures.MaterialSampleTestFixture.RESTRICTION_FIELD_KEY;
-import static ca.gc.aafc.collection.api.testsupport.fixtures.MaterialSampleTestFixture.RESTRICTION_VALUE;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+public class MaterialSampleRepositoryIT extends BaseRepositoryIT {
 
-@SpringBootTest(properties = "keycloak.enabled=true")
-public class MaterialSampleRepositoryIT extends CollectionModuleBaseIT {
+  @Inject
+  protected MaterialSampleService materialSampleService;
 
   @Inject
   private MaterialSampleRepository materialSampleRepository;
@@ -65,21 +64,34 @@ public class MaterialSampleRepositoryIT extends CollectionModuleBaseIT {
   @Inject
   private CollectionManagedAttributeRepo collManagedAttributeRepo;
 
+  @Inject
+  protected ServiceTransactionWrapper serviceTransactionWrapper;
+
   @Test
   @WithMockKeycloakUser(groupRole = {"aafc:user"})
-  public void create_WithAuthenticatedUser_SetsCreatedBy() {
+  @Transactional
+  public void create_WithAuthenticatedUser_SetsCreatedBy()
+      throws ResourceGoneException, ResourceNotFoundException {
     MaterialSampleDto materialSampleDto = MaterialSampleTestFixture.newMaterialSample();
-    QuerySpec querySpec = new QuerySpec(MaterialSampleDto.class);
-    querySpec.includeRelation(PathSpec.of(StorageUnitRepo.HIERARCHY_INCLUDE_PARAM));
-    MaterialSampleDto result = materialSampleRepository.findOne(materialSampleRepository.create(materialSampleDto).getUuid(),
-            querySpec);
+
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(materialSampleDto)
+    );
+
+    UUID matSampleId =
+      JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+        .onCreate(materialSampleToCreate));
+
+    MaterialSampleDto result = materialSampleRepository.getOne(matSampleId,
+        "optfields[" + "material-sample" + "]=" + MaterialSample.HIERARCHY_PROP_NAME)
+      .getDto();
+
     assertNotNull(result.getCreatedBy());
-    assertEquals(materialSampleDto.getAttachment().get(0).getId(), result.getAttachment().get(0).getId());
     assertEquals(MaterialSampleTestFixture.DWC_CATALOG_NUMBER, result.getDwcCatalogNumber());
-    assertEquals(MaterialSampleTestFixture.DWC_OTHER_CATALOG_NUMBERS, result.getDwcOtherCatalogNumbers());
+    assertArrayEquals(MaterialSampleTestFixture.DWC_OTHER_CATALOG_NUMBERS, result.getDwcOtherCatalogNumbers());
     assertEquals(MaterialSampleTestFixture.GROUP, result.getGroup());
     assertEquals(MaterialSampleTestFixture.MATERIAL_SAMPLE_NAME, result.getMaterialSampleName());
-    assertEquals(MaterialSampleTestFixture.PREPARED_BY.toString(), result.getPreparedBy().get(0).getId());
     assertEquals(MaterialSampleTestFixture.PREPARATION_DATE, result.getPreparationDate());
     assertEquals(MaterialSampleTestFixture.ALLOW_DUPLICATE_NAME, result.getAllowDuplicateName());
     assertEquals(materialSampleDto.getBarcode(), result.getBarcode());
@@ -88,81 +100,128 @@ public class MaterialSampleRepositoryIT extends CollectionModuleBaseIT {
 
   @Test
   @WithMockKeycloakUser(groupRole = {"aafc:user"})
-  public void create_WithAParent() {
-    MaterialSampleDto parent = materialSampleRepository.create(MaterialSampleTestFixture.newMaterialSample());
-    MaterialSampleDto child = MaterialSampleTestFixture.newMaterialSample();
-    child.setParentMaterialSample(parent);
-    child = materialSampleRepository.create(child);
+  @Transactional
+  public void create_WithAParent() throws ResourceGoneException, ResourceNotFoundException {
 
-    QuerySpec querySpec = new QuerySpec(MaterialSampleDto.class);
-    querySpec.includeRelation(PathSpec.of(MaterialSample.CHILDREN_COL_NAME));
-    MaterialSampleDto result = materialSampleRepository.findOne(parent.getUuid(), querySpec);
-    assertEquals(child.getUuid(), result.getMaterialSampleChildren().get(0).getUuid());
+    JsonApiDocument parentMaterialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(MaterialSampleTestFixture.newMaterialSample())
+    );
+
+    UUID parentMatSampleId =
+      JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+        .onCreate(parentMaterialSampleToCreate));
+
+    JsonApiDocument childMaterialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(MaterialSampleTestFixture.newMaterialSample()),
+      Map.of("parentMaterialSample", JsonApiDocument.ResourceIdentifier.builder()
+        .id(parentMatSampleId).type(MaterialSampleDto.TYPENAME).build())
+    );
+
+    UUID childMatSampleId =
+      JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+        .onCreate(childMaterialSampleToCreate));
+
+    MaterialSampleDto result = materialSampleRepository.getOne(parentMatSampleId, "include=materialSampleChildren").getDto();
+    assertEquals(childMatSampleId, result.getMaterialSampleChildren().getFirst().getUuid());
   }
 
   @Test
   @WithMockKeycloakUser(groupRole = {"aafc:DINA_ADMIN"})
-  public void create_WithCollection_PersistedWithCollection() {
-    Institution institution = InstitutionFixture.newInstitutionEntity().build();
-    service.save(institution);
-    CollectionDto collectionDto = collectionRepository.create(CollectionFixture.newCollection()
+  @Transactional
+  public void create_WithCollection_PersistedWithCollection()
+      throws ResourceGoneException, ResourceNotFoundException {
+
+    UUID collectionUuid = createWithRepository(CollectionFixture
+      .newCollection()
       .group("aafc")
-      .institution(InstitutionDto.builder().uuid(institution.getUuid()).build()).build());
-    MaterialSampleDto materialSampleDto = MaterialSampleTestFixture.newMaterialSample();
-    materialSampleDto.setCollection(collectionDto);
-    QuerySpec querySpec = new QuerySpec(MaterialSampleDto.class);
-    querySpec.includeRelation(PathSpec.of(StorageUnitRepo.HIERARCHY_INCLUDE_PARAM));
-    assertEquals(collectionDto.getUuid(),
-      materialSampleRepository.findOne(
-        materialSampleRepository.create(materialSampleDto).getUuid(),querySpec).getCollection().getUuid());
+      .build(), collectionRepository::onCreate);
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(MaterialSampleTestFixture.newMaterialSample()),
+      Map.of("collection", JsonApiDocument.ResourceIdentifier.builder()
+        .id(collectionUuid).type(CollectionDto.TYPENAME).build())
+    );
+
+    UUID matSampleUuid = JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+      .onCreate(materialSampleToCreate));
+
+    MaterialSampleDto result = materialSampleRepository.getOne(matSampleUuid, "include=collection").getDto();
+    assertEquals(collectionUuid, result.getCollection().getUuid());
   }
 
   @Test
   @WithMockKeycloakUser(groupRole = {"aafc:user"})
-  public void create_recordCreated() {
-    CollectingEventDto event = eventRepository.findOne(
-            eventRepository.create(CollectingEventTestFixture.newEventDto()).getUuid(), new QuerySpec(CollectingEventDto.class));
-    MaterialSampleDto materialSampleDto = MaterialSampleTestFixture.newMaterialSample();
-    materialSampleDto.setCollectingEvent(event);
-    MaterialSampleDto result = materialSampleRepository.findOne(
-            materialSampleRepository.create(materialSampleDto).getUuid(),
-            new QuerySpec(MaterialSampleDto.class)
+  @Transactional
+  public void create_recordCreated() throws ResourceGoneException, ResourceNotFoundException {
+
+    UUID collEventUUID = createWithRepository(CollectingEventTestFixture.newEventDto(), eventRepository::onCreate);
+
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(MaterialSampleTestFixture.newMaterialSample()),
+      Map.of(
+        "collectingEvent", JsonApiDocument.ResourceIdentifier.builder().id(collEventUUID).type(CollectingEventDto.TYPENAME).build(),
+        "preparedBy", List.of(JsonApiDocument.ResourceIdentifier.builder().id(MaterialSampleTestFixture.PREPARED_BY).type("person").build())
+      )
     );
+
+    UUID matSampleUuid = JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+      .onCreate(materialSampleToCreate));
+    MaterialSampleDto result = materialSampleRepository.getOne(matSampleUuid, "include=collectingEvent,preparedBy").getDto();
+
     assertEquals(MaterialSampleTestFixture.DWC_CATALOG_NUMBER, result.getDwcCatalogNumber());
-    assertEquals(event.getUuid(), result.getCollectingEvent().getUuid());
-    assertEquals(MaterialSampleTestFixture.PREPARED_BY.toString(), result.getPreparedBy().get(0).getId());
+    assertEquals(collEventUUID, result.getCollectingEvent().getUuid());
+    assertEquals(MaterialSampleTestFixture.PREPARED_BY.toString(), result.getPreparedBy().getFirst().getId());
     assertEquals(MaterialSampleTestFixture.PREPARATION_DATE, result.getPreparationDate());
   }
 
   @Test
   @WithMockKeycloakUser(username = "other user", groupRole = { "notAAFC:user" })
-  public void updateFromDifferentGroup_throwAccessDenied() {
+  @Transactional
+  public void updateFromDifferentGroup_throwAccessDenied()
+      throws ResourceGoneException, ResourceNotFoundException {
     MaterialSample testMaterialSample = MaterialSampleFactory.newMaterialSample()
         .group(MaterialSampleTestFixture.GROUP).createdBy("dina").build();
-    materialSampleService.create(testMaterialSample);
+
+    serviceTransactionWrapper.execute((ms) -> materialSampleService.create(ms), testMaterialSample);
+
     MaterialSampleDto retrievedMaterialSample = materialSampleRepository
-        .findOne(testMaterialSample.getUuid(), new QuerySpec(MaterialSampleDto.class));
+        .getOne(testMaterialSample.getUuid(), "").getDto();
+
+    JsonApiDocument docToUpdate = JsonApiDocuments.createJsonApiDocument(
+      retrievedMaterialSample.getJsonApiId(), MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(retrievedMaterialSample)
+    );
+
     assertThrows(AccessDeniedException.class,
-        () -> materialSampleRepository.save(retrievedMaterialSample));
+        () -> materialSampleRepository.onUpdate(docToUpdate, retrievedMaterialSample.getJsonApiId()));
   }
 
   @Test
   @WithMockKeycloakUser(groupRole = { "aafc:user" })
-  public void when_deleteAsUserFromMaterialSampleGroup_MaterialSampleDeleted() {
-    CollectingEventDto event = eventRepository
-        .findOne(eventRepository.create(CollectingEventTestFixture.newEventDto()).getUuid(),
-            new QuerySpec(CollectingEventDto.class));
-    MaterialSampleDto materialSampleDto = MaterialSampleTestFixture.newMaterialSample();
-    materialSampleDto.setCollectingEvent(event);
+  @Transactional
+  public void when_deleteAsUserFromMaterialSampleGroup_MaterialSampleDeleted()
+      throws ResourceGoneException, ResourceNotFoundException {
 
-    MaterialSampleDto result = materialSampleRepository
-        .findOne(materialSampleRepository.create(materialSampleDto).getUuid(),
-            new QuerySpec(MaterialSampleDto.class));
+    UUID collEventUUID = createWithRepository(CollectingEventTestFixture.newEventDto(), eventRepository::onCreate);
+
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(MaterialSampleTestFixture.newMaterialSample()),
+      Map.of("collectingEvent", JsonApiDocument.ResourceIdentifier.builder()
+        .id(collEventUUID).type(CollectingEventDto.TYPENAME).build())
+    );
+    UUID matSampleUuid = JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+      .onCreate(materialSampleToCreate));
+
+    MaterialSampleDto result = materialSampleRepository.getOne(matSampleUuid, "").getDto();
 
     assertNotNull(result.getUuid());
-    materialSampleRepository.delete(result.getUuid());
-    assertThrows(GoneException.class, () -> materialSampleRepository
-        .findOne(result.getUuid(), new QuerySpec(MaterialSampleDto.class)));
+    materialSampleRepository.onDelete(result.getUuid());
+
+    assertThrows(ResourceGoneException.class, () -> materialSampleRepository.getOne(matSampleUuid, ""));
   }
 
   @Test
@@ -172,29 +231,54 @@ public class MaterialSampleRepositoryIT extends CollectionModuleBaseIT {
 
     // Put an invalid key
     materialSampleDto.setRestrictionFieldsExtension(ExtensionValueTestFixture.newExtensionValue("ABC", RESTRICTION_FIELD_KEY, RESTRICTION_VALUE));
-    assertThrows(ValidationException.class, () -> materialSampleRepository.create(materialSampleDto));
+
+    JsonApiDocument docToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(materialSampleDto)
+    );
+
+    assertThrows(ValidationException.class, () -> materialSampleRepository.onCreate(docToCreate));
   }
 
   @Test
   @WithMockKeycloakUser(groupRole = { OrganismTestFixture.GROUP + ":user" })
-  public void updateMaterialSample_WithOrganism_accepted() throws MalformedURLException {
+  @Transactional
+  public void updateMaterialSample_WithOrganism_accepted()
+      throws MalformedURLException, ResourceGoneException, ResourceNotFoundException {
 
     OrganismDto organismDto = OrganismTestFixture.newOrganism(DeterminationFixture.newDetermination());
-    UUID organismUUID = organismRepository.create(organismDto).getUuid();
-    OrganismDto result = organismRepository.findOne(organismUUID,
-            new QuerySpec(OrganismDto.class));
-    assertNotNull(result.getCreatedBy());
+    UUID organismUUID = createWithRepository(organismDto, organismRepository::onCreate);
 
-    MaterialSampleDto materialSampleDto = MaterialSampleTestFixture.newMaterialSample();
-    UUID matSampleUUID = materialSampleRepository.create(materialSampleDto).getUuid();
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(MaterialSampleTestFixture.newMaterialSample()),
+      Map.of("organism", List.of(JsonApiDocument.ResourceIdentifier.builder()
+        .id(organismUUID).type(OrganismDto.TYPENAME).build()))
+    );
+    UUID matSampleUuid = JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+      .onCreate(materialSampleToCreate));
 
-    MaterialSampleDto result2 = materialSampleRepository.findOne(matSampleUUID,
-            new QuerySpec(MaterialSampleDto.class));
+    MaterialSampleDto result = materialSampleRepository.getOne(matSampleUuid, "include=organism").getDto();
+    assertEquals(organismUUID, result.getOrganism().getFirst().getUuid());
 
-    result2.setOrganism(List.of(result));
-    materialSampleRepository.save(result2);
+    // swap the organism for a new one
+    OrganismDto organismDto2 = OrganismTestFixture.newOrganism(DeterminationFixture.newDetermination());
+    UUID organism2UUID = createWithRepository(organismDto2, organismRepository::onCreate);
 
-    organismRepository.delete(organismUUID);
+    JsonApiDocument materialSampleToUpdate = JsonApiDocuments.createJsonApiDocument(
+      matSampleUuid, MaterialSampleDto.TYPENAME,
+      Map.of(),
+      Map.of("organism", List.of(JsonApiDocument.ResourceIdentifier.builder()
+        .id(organism2UUID).type(OrganismDto.TYPENAME).build()))
+    );
+
+    materialSampleRepository.onUpdate(materialSampleToUpdate, matSampleUuid);
+
+    result = materialSampleRepository.getOne(matSampleUuid, "include=organism").getDto();
+    assertEquals(organism2UUID, result.getOrganism().getFirst().getUuid());
+
+    // we should be able to delete the first one since it's not used anymore
+    organismRepository.onDelete(organismUUID);
   }
 
   @Test
@@ -211,21 +295,33 @@ public class MaterialSampleRepositoryIT extends CollectionModuleBaseIT {
       null, CollectionManagedAttributeDto.TYPENAME,
       JsonAPITestHelper.toAttributeMap(newAttribute)
     );
-    newAttribute = collManagedAttributeRepo.create(docToCreate, null).getDto();
+    newAttribute = serviceTransactionWrapper.executeWithParam( (p) ->
+      collManagedAttributeRepo.create(p, null).getDto(), docToCreate);
 
     MaterialSampleDto materialSampleDto = MaterialSampleTestFixture.newMaterialSample();
     materialSampleDto.setGroup(CollectionManagedAttributeTestFixture.GROUP);
 
     // Put an invalid value for Date
     materialSampleDto.setManagedAttributes(Map.of(newAttribute.getKey(), "zxy"));
-    assertThrows(ValidationException.class, () -> materialSampleRepository.create(materialSampleDto));
+    JsonApiDocument matSampleDocToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(materialSampleDto)
+    );
+    assertThrows(ValidationException.class, () -> materialSampleRepository.onCreate(matSampleDocToCreate));
 
     // Fix the value
     materialSampleDto.setManagedAttributes(Map.of(newAttribute.getKey(), "2022-02-02"));
-    UUID matSampleId = materialSampleRepository.create(materialSampleDto).getUuid();
+    JsonApiDocument matSampleDocToRetry = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(materialSampleDto)
+    );
+
+    UUID matSampleId =
+      JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+        .onCreate(matSampleDocToRetry));
 
     //cleanup
-    materialSampleRepository.delete(matSampleId);
+    materialSampleRepository.onDelete(matSampleId);
 
     // can't delete managed attribute for now since the check for key in use is using a fresh transaction
   }
@@ -257,16 +353,25 @@ public class MaterialSampleRepositoryIT extends CollectionModuleBaseIT {
       null, CollectionManagedAttributeDto.TYPENAME,
       JsonAPITestHelper.toAttributeMap(newAttribute)
     );
-    newAttribute = collManagedAttributeRepo.create(docToCreate, null).getDto();
+    newAttribute = serviceTransactionWrapper.executeWithParam( (p) ->
+      collManagedAttributeRepo.create(p, null).getDto(), docToCreate);
 
     MaterialSampleDto materialSampleDto = MaterialSampleTestFixture.newMaterialSample();
     materialSampleDto.setGroup(CollectionManagedAttributeTestFixture.GROUP);
 
     materialSampleDto.setManagedAttributes(Map.of(newAttribute.getKey(), "2022-02-02"));
-    UUID matSampleId = materialSampleRepository.create(materialSampleDto).getUuid();
+
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(materialSampleDto)
+    );
+
+    UUID matSampleId =
+      JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+        .onCreate(materialSampleToCreate));
 
     //cleanup
-    materialSampleRepository.delete(matSampleId);
+    materialSampleRepository.onDelete(matSampleId);
 
     // can't delete managed attribute for now since the check for key in use is using a fresh transaction
   }
